<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".activity.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="32dp"
        android:layout_marginTop="172dp"
        android:fontFamily="serif"
        android:shadowColor="#221E1E"
        android:text="@string/my_tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="71dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="239dp" />

    <Button
        android:id="@+id/buttonAddTaskMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/add_task"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayUserNicknameMainActivity"
        app:layout_constraintVertical_bias="0.205" />

    <ImageButton
        android:id="@+id/imageButtonToSettingsPageMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonAllTasksMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListLogoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTaskMainActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplayUserNicknameMainActivity"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/textViewDisplayUserNicknameMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nickname"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTaskMainActivity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTaskMainActivity"
        android:layout_width="356dp"
        android:layout_height="229dp"
        android:layout_marginTop="224dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/taskListLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="36dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/bannerAdView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/taskListLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="28dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toTopOf="@+id/bannerAdView"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonInterstitialAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/interstitial_ad"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRewardAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/rewards_ad"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toEndOf="@+id/buttonInterstitialAd"
        app:layout_constraintTop_toBottomOf="@+id/textViewRewardPoints"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewRewardPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/rewards_ad_text_view"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonToSettingsPageMainActivity"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>