<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks" translatable="false">My Tasks</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task">ADD TASK</string>
    <string name="todo">TODO</string>
    <string name="all_tasks_title">All Tasks</string>
    <string name="total_tasks">Total Tasks:</string>
    <string name="task_title">Task Title</string>
    <string name="do_something">Do Something</string>

    <string name="task_description">Task Description</string>
    <string name="add_task_">Add Task</string>
    <string name="my_task_">My Task</string>
    <string name="all_tasks_button">All Tasks</string>
    <string name="nickname">Nickname: %1$s</string>
    <string name="save">Save</string>
    <string name="nickname_title">Nickname</string>
    <string name="enter_nickname">Enter Nickname</string>

    <string name="task_title_task_detail_activity">%1$s</string>
    <string name="blank_task_name">Blank Task Name</string>
    <string name="no_task">No Task</string>
...
