...
      android:layout_marginTop="48dp"
      android:text="@string/delete_task"
      app:layout_constraintStart_toEndOf="@+id/buttonEditTaskViewTask"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textViewTaskTitleTaskDetailActivity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="132dp"
      android:text="@string/task_title_task_detail_activity"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.477"
...
